--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,7 +8,7 @@
 @import 'base/variables';
 @import 'base/animations';
 @import 'blocks/promo';
-@import "blocks/_header";
+@import "blocks/header";
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/titles';
